Add db migration, update config, add login page

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,9 @@
                             <a href="{{ url_for('index') }}" class="navbar-item">
                                 Home
                             </a>
+                            <a href="{{ url_for('auth.signup') }}" class="navbar-item">
+                                Sign Up
+                            </a>
                         </div>
                     </div>
                 </div>
