--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block content %}
 <h1 class="title">
-    Welcome, {{ name }}!{{ admin}}
+    Welcome, {{ employee.first_name}} {{employee.last_name}}!{{ admin}}
 </h1>
 {% endblock %}
