Finish employee flow

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 <!-- templates/base.html -->
+
 <!DOCTYPE html>
 <html>
 
@@ -31,8 +32,19 @@
                             </a>
                             <a href="{{ url_for('auth.signup') }}" class="navbar-item">
                                 Sign Up
+                            </a> {% endif %} {% if current_user.is_authenticated and user_is_admin %}
+                            <a href="{{ url_for('main.add_employee') }}" class="navbar-item">
+                                Add Employee
+                            </a> {% endif %} {% if current_user.is_authenticated and user_is_manager %}
+                            <a href="{{ url_for('main.leave_approval') }}" class="navbar-item">
+                                Approve
                             </a> {% endif %} {% if current_user.is_authenticated %}
-
+                            <a href="{{ url_for('main.leave_request') }}" class="navbar-item">
+                                Request
+                            </a> {% endif %} {% if current_user.is_authenticated %}
+                            <a href="{{ url_for('main.leave_request_history') }}" class="navbar-item">
+                                History
+                            </a> {% endif %}{% if current_user.is_authenticated %}
                             <a href="{{ url_for('auth.logout') }}" class="navbar-item">
                                 Logout
                             </a> {% endif %}
