--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,4 +2,5 @@
 <h1 class="title">
     Welcome, {{ employee.first_name}} {{employee.last_name}}!{{ admin}}
 </h1>
+<!-- <p>{{emp}}</p> -->
 {% endblock %}
