Get API working

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %} {% block content %}
 <h1 class="title">Leave Management System</h1>
-<h2 class="subtitle">Capstone Project submission for SWDV-691 By Tracy Mazelin</h2>
+<h2 class="subtitle">Capstone Project for SWDV-691 By Tracy Mazelin</h2>
 {% endblock %}
