--- a/templates/leave_request.html
+++ b/templates/leave_request.html
@@ -17,7 +17,7 @@
                     <div class="select is-large is-fullwidth">
                         <select name="types"> 
                             {% for type in types %}
-                      <option value={{ type.leave_type_id }}>{{ type.name }}</option>
+                      <option value={{ type.id }}>{{ type.name }}</option>
                       {% endfor %}
                     </select>
                     </div>
