--- a/templates/leave_request_history.html
+++ b/templates/leave_request_history.html
@@ -6,6 +6,9 @@
         <table class="table is-bordered is-striped is-hoverable is-fullwidth">
             <thead>
                 <tr>
+                    {% if user_is_manager %}
+                    <th>Employee</th>
+                    {% endif %}
                     <th>Type</th>
                     <th>Start</th>
                     <th>End</th>
@@ -16,6 +19,9 @@
             <tbody>
                 {% for request in requests %}
                 <tr>
+                    {% if user_is_manager %}
+                    <td>{{ request.employee.name }}</td>
+                    {% endif %}
                     <td>{{ request.leave_type.name }}</td>
                     <td>{{ request.start_date }}</td>
                     <td>{{ request.end_date }} </td>
