--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,9 @@
                             </a> {% endif %} {% if current_user.is_authenticated and user_is_admin %}
                             <a href="{{ url_for('main.add_employee') }}" class="navbar-item">
                                 Add Employee
+                            </a> {% endif %} {% if current_user.is_authenticated and user_is_admin %}
+                            <a href="{{ url_for('main.view_employees') }}" class="navbar-item">
+                                View All Employees
                             </a> {% endif %} {% if current_user.is_authenticated and user_is_manager %}
                             <a href="{{ url_for('main.process_requests') }}" class="navbar-item">
                                 Process Requests
