--- a/templates/leave_request_history.html
+++ b/templates/leave_request_history.html
@@ -1,37 +1,36 @@
 {% extends "base.html" %} {% block content %}
 <h3 class="title">Leave History</h3>
-<div class="column is-three-fifths is-offset-one-fifth">
-    <div class="box">
-        {% if requests %}
-        <table class="table is-bordered is-striped is-hoverable is-fullwidth">
-            <thead>
-                <tr>
-                    {% if user_is_manager %}
-                    <th>Employee</th>
-                    {% endif %}
-                    <th>Type</th>
-                    <th>Start</th>
-                    <th>End</th>
-                    <th>Comment</th>
-                    <th>Status</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for request in requests %}
-                <tr>
-                    {% if user_is_manager %}
-                    <td>{{ request.employee.name }}</td>
-                    {% endif %}
-                    <td>{{ request.leave_type.name }}</td>
-                    <td>{{ request.start_date }}</td>
-                    <td>{{ request.end_date }} </td>
-                    <td>{{request.comment}}</td>
-                    <td>{{request.approval_status.name}}</td>
-                </tr>{% endfor %}
-            </tbody>
-        </table>
-        {% else %}
-        <p>No Results</p>
-        {% endif %}
-    </div>
-</div> {% endblock %}
+<div class="box">
+    {% if requests %}
+    <table class="table is-bordered is-striped is-hoverable is-fullwidth">
+        <thead>
+            <tr>
+                {% if user_is_manager %}
+                <th>Employee</th>
+                {% endif %}
+                <th>Type</th>
+                <th>Start</th>
+                <th>End</th>
+                <th>Comment</th>
+                <th>Status</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for request in requests %}
+            <tr>
+                {% if user_is_manager %}
+                <td>{{ request.employee.name }}</td>
+                {% endif %}
+                <td>{{ request.leave_type.name }}</td>
+                <td>{{ request.start_date }}</td>
+                <td>{{ request.end_date }} </td>
+                <td>{{request.comment}}</td>
+                <td>{{request.approval_status.name}}</td>
+            </tr>{% endfor %}
+        </tbody>
+    </table>
+    {% else %}
+    <p>No Results</p>
+    {% endif %}
+</div>
+{% endblock %}
