--- a/app/templates/leave_request.html
+++ b/app/templates/leave_request.html
@@ -40,7 +40,7 @@
             <div class="field">
                 <label class="label">Comment</label>
                 <div class="control">
-                    <input class="input is-large" type="text" name="comment" placeholder="Comments">
+                    <input class="input is-large" type="text" maxlength="30" name="comment" placeholder="Comments">
                 </div>
             </div>
 
