--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -5,22 +5,22 @@
         <form method="POST" action="/signup">
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="text" name="first_name" placeholder="First Name" autofocus="">
+                    <input class="input is-large" type="text" required="required" maxlength="30" name="first_name" placeholder="First Name" autofocus="">
                 </div>
             </div>
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="text" name="last_name" placeholder="Last Name" autofocus="">
+                    <input class="input is-large" type="text" required="required" maxlength="30" name="last_name" placeholder="Last Name" autofocus="">
                 </div>
             </div>
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="email" name="email" placeholder="Email" autofocus="">
+                    <input class="input is-large" type="email" required="required" maxlength="50" name="email" placeholder="Email" autofocus="">
                 </div>
             </div>
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="password" name="password" placeholder="Password">
+                    <input class="input is-large" type="password" required="required" maxlength="50" name="password" placeholder="Password">
                 </div>
             </div>
             <button class="button is-block is-info is-large is-fullwidth">Sign Up</button>
