--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -10,12 +10,12 @@
         <form method="POST" action="/login">
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="email" name="email" placeholder="Your Email" autofocus="">
+                    <input class="input is-large" type="email" required="required" name="email" placeholder="Your Email" autofocus="">
                 </div>
             </div>
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="password" name="password" placeholder="Your Password">
+                    <input class="input is-large" type="password" required="required" name="password" placeholder="Your Password">
                 </div>
             </div>
             <div class="field">
